# rrfusion

./: AGENT.md  CLAUDE_CODE_GUIDE.md  DOCUMENTATION.md  Makefile.toml  README.md  docker-compose.yml  pyproject.toml
.claude/: README.md
.claude/skills/: fusion-algorithm.md  lane-design.md  mcp-development.md  redis-debug.md  spec-check.md  test-workflow.md
apps/db_stub/: Dockerfile  app.py
apps/mcp-host/: Dockerfile
db-stub/: Dockerfile
deploy/: .env.example  docker-compose.yml
docs/: DESIGN_DECISION_REMOVE_ABC_LABELING.md  ISSUES_BACKEND_FI_NORMALIZATION.md  METRICS_TROUBLESHOOTING.md  TROUBLESHOOTING_MCP_VALIDATION.md
docs/archive/: Fusion.md  README.md  RRFusionSpec_v1.4_changes.md  RRFusionSpecification_old.md
docs/developer/: 01_architecture.md  02_mcp_interface.md  03_backend_interface.md  04_storage_layer.md  05_fusion_engine.md  06_components.md  07_deployment.md  README.md
docs/searcher/: 01_concept.md  02_pipeline.md  03_query_design.md  04_vocabulary_strategy.md  05_classification_codes.md  06_tuning_guide.md  07_maintenance.md  README.md
infra/: compose.ci.yml  compose.dev.yml  compose.full.yml  compose.prod.yml  compose.stub.yml  compose.test.yml  env.example
mcp/: Dockerfile  app.py
prompts/: README.md  SystemPrompt_v1_5.yaml
prompts/archive/: README.md
scripts/: debug_metrics.py  fix_mixed_language_queries.py  remove_representatives.py  run_e2e.sh  validate_systemprompt_sync.py
src/rrfusion/: Fusion.md  RRFusionSpec_v1.4_changes.md  (+13 more)
tests/: test_fusion.py  test_host_filters.py  test_models.py  test_snippets.py  test_storage.py
(+18 files in other folders)
