[project]
name = "rrfusion"
version = "0.1.0"
description = "Multi-lane patent search fusion with MCP + Redis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "rrfusion maintainers"}
]
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.29.0",
  "redis[hiredis]>=5.0.0",
  "httpx>=0.27.0",
  "fastmcp>=2.13.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.1",
  "orjson>=3.9.0",
  "python-dotenv>=1.0.1",
  "numpy>=1.26.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.4.0",
  "anyio>=4.4.0"
]

[build-system]
requires = ["setuptools>=69.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.4.0",
  "anyio>=4.4.0"
]
